  AbstractValueChangeMapEditModel, added default implementations for abstract methods, renamed to DefaultValueChangeMapEditModel
  ForeignKeySearchModel.initialize() removed
  AbstractInputProvider overgenerified?
  More finalization/inheritance work
  Coberture coverage added to build.xml
  ValueMapImplTest added
  EntityDbConnection.insert() minor optimzation change
  EntityImpl.handleSetAs() did not call super
  DefaultEntityEditModel.update() now sets the active entity after update
  PropertyFilterModel, most of it pushed up into SearchModel
  AbstractSearchModel renamed to DefaultSearchModel
  AbstractFilteredTableModel now contains the column search models, filterCriteria implemented accordingly
  PropertyFilterPanel stuff moved to AbstractSearchPanel
  AbstractFilteredTablePanel now contains the column search panels
  DateBeanValueLink and TimestampBeanValueLink added
  ValueMap.getValueCount() removed
  Field and parameter finalization (automatic)
  common.model.valuemap improved unit tests
  common.model improved unit tests
  common.ui.control improved unit tests
  common.ui improved and added unit tests
  common.model.valuemap.Validator added
  DefaultValidator added
  DefaultValueChangeMapEditModel.getValidator() added
  EntityValidator added
  DefaultEntityValidator added
  EntityValidator.getDbProvider() added
  DefaultEntityValidator.dbProvider field added
  EntityPanelProvider.validatorClass added
  EntityValidator moved to client.model
  Insert/Update/DeleteListener added
  EntityTablePanel.initializeSearchPanel() and initializeSummaryPanel() removed to constructor
  DefaultFilteredComboBoxModel.setSelectedItem() now final, translateSelectionItem() and vetoSelectionChange() added
  DefaultFilteredComboBoxModel.resetContents() removed
  AbstractBeanValueLink.getSet/GetMethod() now private
  LoadTestModel.usageScenarios now final, initializeUsageScenarios() removed
  More finalization of classes, fields and methods